Fix video on small screens

--- a/ui/src/components/VideoContainer.css
+++ b/ui/src/components/VideoContainer.css
@@ -36,4 +36,5 @@
 
 .video-elem {
     outline: none;
+    width: 75vw;
 }
